# llm_eval_backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backup/: evaluation_2.py
backup/metrics/: base.py  char_f1.py  exact_match.py  exact_match_figure.py
src/: .env.sample
src/app/: main.py
src/app/api/: models.py
src/app/api/endpoints/: evaluation.py  models.py
src/app/config/: config.py
src/app/core/: evaluation.py
src/app/metrics/: __init__.py  bleu.py  contains_answer.py  set_f1.py
src/app/utils/: litellm_helper.py  logging.py
src/app/utils/model_management/: __init__.py  controller.py
todos/: todo_1.md  todo_2.md  todo_3.md
